# linedata

./: .gitignore  .gitmodules  config_staging_env.sh  install_dependencies_linux.sh  install_dependencies_mac.sh  install_helper_software.sh  readme.md
.github/workflows/: sync_corpus.yml
ci/: sync_corpus.sh
containers/verification_server/: readme.md
doc/: dataops_api.yaml  openapi.yaml
line-level-data-collection/: .gitignore  .slsignore  Makefile  README.md  dev_requirements.txt  docker-compose.yml  package-lock.json  package.json  requirements.txt  serverless.yml  serverless_verification_module.yml  setup.md  setup.py
line-level-data-collection/docker/: Dockerfile  awscli.Dockerfile
line-level-data-collection/line_level_data_collection/: config.py  data_entry_view.py  data_update_event.py  log.py  s3_helper.py  time_util.py
line-level-data-collection/line_level_data_collection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
line-level-data-collection/notebooks/: visualization.ipynb
line-level-data-collection/release/: Dockerfile  entry.sh
python_playground/: generate_fake_corpus.py  pyproject.toml  render_corpus_formula.py
python_playground/lldc/: create_json.py
python_playground/lldc/proto/: line_pb2.py
scripts/: clean_up.sh  create_users.sh  deploy_all.sh  deploy_serverless.sh  deploy_serverless_verification_app.sh  deploy_terraform.sh  migrate_database.sh  openapi_codegen.sh  update_open_api_dependency.sh
terraform/: .terraform.lock.hcl  ingestion.tf  main.tf  variables.tf
terraform-deployment/: .gitignore  terragrunt.hcl
(+66 files in other folders)
